// Copyright 2016 The LUCI Authors. All rights reserved.
// Use of this source code is governed under the Apache License, Version 2.0
// that can be found in the LICENSE file.

syntax = "proto3";

package logdog;

option go_package = "go.chromium.org/luci/logdog/api/endpoints/coordinator/services/v1;logdog";

// ArchiveTask is a task queue task description for the archival of a single
// log stream.
message ArchiveTask {
  // The name of the project that this stream is bound to.
  string project = 1;
  // The hash ID of the log stream to archive.
  string id = 2;
  // The TaskQueue Name of this task, used in the taskqueue pipeline.
  // This is required for ACKing.
  string task_name = 7;
  // The realm name (within the project) that the prefix of the stream is
  // associated with.
  string realm = 8;
  // The number of times this task has been retried. Do not set this field
  // when submitting a new task; it is populated when leasing a task.
  int64 retry_count = 9;
  // TODO(hinoka): Remove this after crbug.com/923557
  // The archival key of the log stream. If this key doesn't match the key in
  // the log stream state, the request is superfluous and should be deleted.
  bytes key = 3;
}
